# Buas-Intake-Opdracht

./: .gitignore
Class/: Diagram.drawio.html
Collision-Game/: BaseScene.h  Button.cpp  Button.h  ClassDiagram.cd  Collision-Game.sln  Collision-Game.vcxproj  Collision-Game.vcxproj.filters  Core.cpp  Core.h  Director.cpp  Director.h  Entity.cpp  Entity.h  GameManager.cpp  GameManager.h  GameScene.cpp  GameScene.h  GlobalVariables.h  Main.cpp  Player.cpp  Player.h  Scene.cpp  Scene.h  SceneManager.h  Scenemanager.cpp  StartScene.cpp  StartScene.h
Nolan_Bijmholt_251158_intake_2025_26/: Nolan_Bijmholt_251158_intake_2025_26.vcxproj
Nolan_Bijmholt_251158_intake_2025_26/Kolvor/: BeamEnemy.cpp  BeamEnemy.h  Cursor.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  GameManager.cpp  GameManager.h  GameOverScene.cpp  InfoScene.cpp  Player.cpp  Scenemanager.cpp  StartScene.cpp  Timer.h
Nolan_Bijmholt_251158_intake_2025_26/Kolvor/x64/Debug/: Kolvor.exe.recipe  vc143.idb
Nolan_Bijmholt_251158_intake_2025_26/Kolvor/x64/Release/: Kolvor.exe.recipe  Kolvor.iobj  Kolvor.ipdb
Nolan_Bijmholt_251158_intake_2025_26/Nolan_Bijmholt_251158_intake_2025_26 - Copy/: Nolan_Bijmholt_251158_intake_2025_26.sln  Nolan_Bijmholt_251158_intake_2025_26.vcxproj.filters
Nolan_Bijmholt_251158_intake_2025_26/Nolan_Bijmholt_251158_intake_2025_26 - Copy/Kolvor/: Core.cpp  Core.h  Cursor.cpp  Enemy.cpp  GameOverScene.h  Player.h  ProgramConfig.h  SceneManager.h  StartScene.cpp  main.cpp
collision-game/: CMakeLists.txt  Conventions.md  main.cpp
collision-game/configurations/: GAME_CONFIG.h  PROGRAM_CONFIG.h
collision-game/headers/: BeamEnemy.h  Core.h  Cursor.h  Enemy.h  Entity.h  GameManager.h  GameScene.h  GlobalVariables.h  InfoScene.h  Player.h  ProgramConfig.h  SceneManager.h  StartScene.h  Timer.h
collision-game/include/: GameManager.h
collision-game/libs/raygui-4.0/CMake/: CMakeLists.txt
collision-game/libs/raylib-5.5/src/: raylib.h
collision-game/sources/: BeamEnemy.cpp  Core.cpp  Cursor.cpp  Enemy.cpp  Entity.cpp  GameManager.cpp  GameOverScene.cpp  GameScene.cpp  InfoScene.cpp  Player.cpp  ProgramConfig.cpp  Scenemanager.cpp  StartScene.cpp  Timer.cpp
documents/: Conventions.md
(+17 files in other folders)
